syntax = "proto3";

package redgrouse.api;

message ApiErrorBody {
  string error = 1;
  optional string code = 2;
}

message UploadMetadata {
  string upload_id = 1;
  string filename = 2;
  int64 row_count = 3;
  string title = 4;
  int64 data_version = 5;
}

message UploadResponse {
  string upload_id = 1;
  string filename = 2;
  int64 row_count = 3;
  string edit_token = 4;
  string title = 5;
  int64 data_version = 6;
}

message UpdateResponse {
  string upload_id = 1;
  string filename = 2;
  int64 row_count = 3;
  string title = 4;
  int64 data_version = 5;
}

message DeleteResponse {
  bool deleted = 1;
}

message CountResponse {
  int64 count = 1;
  int64 data_version = 2;
}

message FieldMetadata {
  string name = 1;
  string label = 2;
  string field_type = 3;
}

message FieldMetadataList {
  repeated FieldMetadata fields = 1;
}

message FieldValues {
  string field = 1;
  repeated string values = 2;
  int64 data_version = 3;
}

message BboxResponse {
  double min_lng = 1;
  double min_lat = 2;
  double max_lng = 3;
  double max_lat = 4;
  int64 data_version = 5;
}

message Species {
  string common_name = 1;
  string scientific_name = 2;
}

message Sighting {
  int64 id = 1;
  optional uint32 common_name_index = 2;
  optional int64 count = 3;
  double latitude = 4;
  double longitude = 5;
  optional string country_code = 6;
  optional string region_code = 7;
  string observed_at = 8;
}

message GroupedSighting {
  optional uint32 common_name_index = 1;
  optional string country_code = 2;
  optional string observed_at = 3;
  int64 count = 4;
  int64 species_count = 5;
}

message SightingsResponse {
  repeated Species name_index = 1;
  repeated Sighting sightings = 2;
  repeated GroupedSighting groups = 3;
  int64 total = 4;
  int64 data_version = 5;
  optional string next_cursor = 8;
}

message VersionInfo {
  string git_hash = 1;
  string build_date = 2;
  string rustc_version = 3;
}

message SpeciesCount {
  string common_name = 1;
  string scientific_name = 2;
  int64 count = 3;
}

message CountryStats {
  string country_code = 1;
  int64 sightings = 2;
  int64 lifers = 3;
}

message TimelinePoint {
  string date = 1;
  int64 count = 2;
}

message StatsResponse {
  int64 total_sightings = 1;
  int64 total_lifers = 2;
  int64 total_year_ticks = 3;
  int64 total_country_ticks = 4;
  int64 total_species = 5;
  int64 total_countries = 6;
  int64 total_regions = 7;
  int64 hours_birding_minutes = 8;
  optional string first_sighting_date = 9;
  optional string latest_sighting_date = 10;
  repeated SpeciesCount top_species = 11;
  repeated CountryStats country_stats = 12;
  int64 data_version = 13;
  int64 total_individuals = 14;
  optional double total_distance_km = 15;
  repeated TimelinePoint lifers_timeline = 16;
  repeated TimelinePoint sightings_timeline = 17;
  int64 longest_streak_days = 18;
}
